--- a/crm/package.json
+++ b/crm/package.json
@@ -4,9 +4,7 @@
   "description": "CRM Alinhatta - Sistema de Gestão de Leads",
   "main": "index.html",
   "scripts": {
-    "dev": "python server.py",
-    "build": "echo 'No build step required'",
-    "start": "echo 'Static site - no start command needed'"
+    "dev": "python server.py"
   },
   "dependencies": {
     "@vercel/kv": "^0.2.0"
