--- a/package.json
+++ b/package.json
@@ -1,20 +1,33 @@
 {
-  "name": "crm-alinhatta",
-  "version": "1.0.0",
-  "description": "CRM Alinhatta - Sistema de Gestão de Leads",
-  "main": "index.html",
+  "name": "crm-alinhatta-v2",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "python server.py"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@vercel/kv": "^0.2.0"
+    "@supabase/supabase-js": "^2.95.3",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.22",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18"
-  },
-  "keywords": ["crm", "leads", "alinhatta"],
-  "author": "",
-  "license": "ISC"
+    "@eslint/js": "^9.39.1",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.48.0",
+    "vite": "^7.3.1"
+  }
 }
